--- a/lieuBibliotheque.html
+++ b/lieuBibliotheque.html
@@ -207,7 +207,7 @@
                     <h1>Bibliothèque<br>"Croc'Blocks"</h1>
                 </div>
                 <div class="row g-0 lieutxt">
-                    <p>Croc' Blocks est un lieu où petits et grands peuvent venir partager leur passion de la lecture. Donner envie de croquer des blocks de textes, autrement dit, des books, est notre coeur de métier. Alors bonne lecture à toutes et tous !</p>
+                    <p>Brick Books est un lieu où petits et grands peuvent venir partager leur passion de la lecture. Donner envie de croquer des bricks de textes est notre coeur de métier. Alors bonne lecture à toutes et tous !</p>
                 </div>
                 <div class="row g-0 lieutxt2">
                     <div class="col-md-6">
